--- a/examples/index.less
+++ b/examples/index.less
@@ -1,4 +1,16 @@
 .button-eg-container {
-  padding: 10px;
-}
+  padding: 20px;
 
+  .button-eg-group {
+    margin-bottom: 40px;
+
+    .btn {
+      margin-right: 10px;
+    }
+
+    h4 {
+      background: gainsboro;
+      padding: 10px;
+    }
+  }
+}
